--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
             android:exported="true"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.WorkClockMailer">
+            android:theme="@style/Theme.WorkClockMailer"
+            android:layoutDirection="ltr">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
